--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/nav_photos"
-        android:icon="@android:drawable/ic_menu_camera"
-        android:title="@string/nav_photos" />
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_photos"
+            android:icon="@android:drawable/ic_menu_camera"
+            android:title="@string/nav_photos" />
 
-    <item
-        android:id="@+id/nav_settings"
-        android:icon="@android:drawable/ic_menu_preferences"
-        android:title="@string/nav_settings" />
-    <item
-        android:id="@+id/nav_exit"
-        android:icon="@android:drawable/ic_menu_close_clear_cancel"
-        android:title="@string/nav_exit" />
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@android:drawable/ic_menu_preferences"
+            android:title="@string/nav_settings" />
+        <item
+            android:id="@+id/nav_exit"
+            android:icon="@android:drawable/ic_menu_close_clear_cancel"
+            android:title="@string/nav_exit" />
+    </group>
 </menu>
